fixed horizontal scroll on home page

--- a/client/src/components/shared/Header.css
+++ b/client/src/components/shared/Header.css
@@ -49,6 +49,7 @@
   position: absolute;
   right: 10px;
   top: 110%;
+  z-index: 1;
 }
 
 .header-hide-dropdown {
